--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
       "node": true,
       "jest": true
     },
+    "rules": {
+      "no-plusplus": "off"
+    },
     "extends": "airbnb-base",
     "parserOptions": {
         "ecmaVersion": 2018,
